RESOLVED FIXED90719
REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html failing on GTK Linux 64-bit Release
https://bugs.webkit.org/show_bug.cgi?id=90719
Summary REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html failing on GTK ...
Zan Dobersek
Reported 2012-07-06 23:31:50 PDT
fullscreen/exit-full-screen-iframe.html started failing on GTK Linux 64-bit Release in r122035 <http://trac.webkit.org/changeset/122035>. http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r122034%20(26208)/results.html passed http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r122035%20(26209)/results.html failed Here's the crashlog: (from http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r122035%20(26209)/fullscreen/exit-full-screen-iframe-crash-log.txt) Crash log for DumpRenderTree (pid 19882): [New LWP 19882] [New LWP 19899] [New LWP 20020] [New LWP 20026] [New LWP 20028] [New LWP 20031] [New LWP 20034] [New LWP 20036] [New LWP 21368] [New LWP 20033] [New LWP 20025] [Thread debugging using libthread_db enabled] Core was generated by `/home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/Programs/D'. Program terminated with signal 11, Segmentation fault. #0 0x00007f2c199cf823 in WebKit::ChromeClient::exitFullScreenForElement(WebCore::Element*) () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libwebkitgtk-3.0.so.0 ... Thread 1 (Thread 0x7f2c1b3f2900 (LWP 19882)): #0 0x00007f2c199cf823 in WebKit::ChromeClient::exitFullScreenForElement(WebCore::Element*) () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libwebkitgtk-3.0.so.0 #1 0x00007f2c19c9cb18 in WebCore::Document::webkitExitFullscreen() () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libwebkitgtk-3.0.so.0 #2 0x00007f2c19c9cd6f in WebCore::Document::webkitCancelFullScreen() () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libwebkitgtk-3.0.so.0 #3 0x00007f2c1a5799b9 in WebCore::jsDocumentPrototypeFunctionWebkitCancelFullScreen(JSC::ExecState*) () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libwebkitgtk-3.0.so.0 #4 0x00007f2bcf2f2265 in ?? () #5 0xffff000000000002 in ?? () #6 0x00007f2c1b1b65fd in llint_op_call () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/.libs/libjavascriptcoregtk-3.0.so.0 #7 0x0000000000000000 in ?? () STDERR: STDERR: warning: Can't read pathname for load map: Input/output error. STDERR: WebKitDOMHTMLElement* WebKit::kit(WebCore::HTMLElement*): assertion `obj' failed
Attachments
Patch (4.34 KB, patch)
2012-07-07 12:27 PDT, Zan Dobersek
no flags
Philippe Normand
Comment 1 2012-07-07 09:38:42 PDT
Thanks Zan for always keeping an eye out! A patch for this should be trivial, getting inspired from http://trac.webkit.org/changeset/122035/trunk/Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp Do you want to take up on this, Zan?
Zan Dobersek
Comment 2 2012-07-07 12:27:22 PDT
Zan Dobersek
Comment 3 2012-07-07 12:49:38 PDT
Comment on attachment 151145 [details] Patch Clearing flags on attachment: 151145 Committed r122054: <http://trac.webkit.org/changeset/122054>
Zan Dobersek
Comment 4 2012-07-07 12:49:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.