REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html failing on GTK Linux 64-bit Release https://bugs.webkit.org/show_bug.cgi?id=90719

Reviewed by Martin Robinson.

Source/WebKit/gtk:

Follow the approach of the BlackBerry port outlined in r122035, using in exitFullScreenForElement
the fullscreen element to which the reference was saved when enterFullScreenForElement was called.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::ChromeClient::exitFullScreenForElement):

LayoutTests:

Remove the crashing test expectation for the affected test.

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/108566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122054 268f45cc-cd09-0410-ab3c-d52691b4dbfc